[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/combat/hud/card_tile.gd" type="Script" id=1]
[ext_resource path="res://assets/cards/dark_background.png" type="Texture" id=2]
[ext_resource path="res://assets/cards/rounded_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/cards/null.png" type="Texture" id=4]
[ext_resource path="res://assets/cards/value_box.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Inter-SemiBold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Inter-Medium.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=3]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 52
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="CardTile" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="DarkBackground" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="LightBackground" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ValueBox" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Frame" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="SmallValueLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -21.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 21.0
rect_min_size = Vector2( 17, 17 )
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]X[/center]"
text = "X"
fit_content_height = true

[node name="MidValueLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -42.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 42.0
rect_min_size = Vector2( 34, 34 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]X[/center]"
text = "X"
fit_content_height = true

[node name="BigValueLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -83.0
margin_top = 17.0
margin_right = -16.0
margin_bottom = 84.0
rect_min_size = Vector2( 34, 34 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]X[/center]"
text = "X"
fit_content_height = true
